[FEAT]월경일 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
         <item>Dec</item>
     </string-array>
 
+    <string name="label_setting_button">This is the settings button</string>
+    <string name="label_symtpon_checked">This is a checked symptom.</string>
+    <string name="label_symtpon_unchecked">This is an unchecked symptom</string>
+
 </resources>
